[gd_scene load_steps=2 format=3 uid="uid://bdyp538fqygcq"]

[ext_resource type="Script" uid="uid://ccrjwvs8ik3ce" path="res://scripts/hud.gd" id="1_e2407"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_e2407")

[node name="CurrentLevel" type="Label" parent="."]
offset_left = 19.0
offset_top = 10.0
offset_right = 73.0
offset_bottom = 36.0
text = "Level 2"
metadata/_edit_use_anchors_ = true

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 40.0
offset_right = 81.0
offset_bottom = 66.0
text = "Coins: 0"

[node name="LivesContainer" type="HBoxContainer" parent="."]
offset_left = 19.0
offset_top = 70.0
offset_right = 119.0
offset_bottom = 96.0

[node name="LivesIcon" type="Label" parent="LivesContainer"]
layout_mode = 2
text = "â™¥"
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="LivesLabel" type="Label" parent="LivesContainer"]
layout_mode = 2
text = "Lives: 3"

[node name="MessageContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="MessageContainer"]
layout_mode = 2
text = "MESSAGE"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 48
